fixed my colleagues OCD -> login was not centered

--- a/public/css/pages/login.css
+++ b/public/css/pages/login.css
@@ -64,6 +64,12 @@ input[type="radio"] {
   transition: all 0.6s ease;
 }
 
+
+.slide-controls .slide:first-of-type{
+  margin-left: -2.5rem;
+}
+
+
 .slide-controls .signup {
   color: #000;
 }
